--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -6,4 +6,32 @@ body {
   padding: 0;
   font-family: "PT Mono", monospace;
   overflow-x: hidden;
+  background-color: rgb(252, 252, 252);
+}
+
+h1 {
+  color: black;
+  font-size: 4rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+h2 {
+  color: black;
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
+p {
+  color: rgb(87, 100, 112);
+  font-size: 1rem;
+}
+
+.container-main {
+  width: 90vw;
+  max-width: 850px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
 }
