--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -23,7 +23,7 @@ h2 {
 }
 
 p {
-  color: rgb(87, 100, 112);
+  color: rgb(63, 73, 82);
   font-size: 1rem;
 }
 
@@ -34,4 +34,8 @@ p {
   flex-direction: column;
   align-items: center;
   margin: auto;
+}
+
+a {
+  text-decoration: none;
 }
