--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -11,7 +11,7 @@ body {
 
 h1 {
   color: black;
-  font-size: 4rem;
+  font-size: calc(2.4rem + 2vw);
   font-weight: bold;
   text-align: center;
 }
