--- a/src/css/CustomNavbar.scss
+++ b/src/css/CustomNavbar.scss
@@ -2,6 +2,8 @@
   width: 100vw;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: stretch;
   position: fixed;
   transition-duration: 0.5s;
   top: 0;
@@ -9,17 +11,8 @@
   z-index: 1;
 }
 
-.navbar-item {
-  min-width: 150px;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  text-transform: capitalize;
-  transition-duration: 0.4s;
-}
-
-.navbar-item:hover {
+.navbar-item:hover,
+.navbar-item-responsive:hover {
   cursor: pointer;
   background-color: rgb(61, 61, 61);
   color: white;
@@ -28,14 +21,51 @@
 .dark {
   background-color: transparent;
   border-bottom: 1px solid rgba(169, 169, 169, 0.226);
-  height: 9vh;
+  min-height: 80px;
   color: white;
 }
 
 .light {
   background-color: white;
-  height: 7.5vh;
+  min-height: 60px;
   color: black;
   border-bottom: 1px solid rgba(97, 97, 97, 0.226);
-  // box-shadow: 0 4px 2px -2px darkgray;
+}
+
+.navbar-item {
+  min-width: 150px;
+  text-transform: capitalize;
+  text-align: center;
+  margin: auto 0;
+  transition-duration: 0.4s;
+}
+
+.icon,
+.image-icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar-item {
+    display: none;
+  }
+  .navbar-item-responsive {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    height: 55px;
+    width: 100%;
+    text-transform: capitalize;
+  }
+  .image-icon {
+    width: 55px;
+    height: 55px;
+    display: block;
+    padding-left: 20px;
+  }
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
 }
