--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -6,7 +6,7 @@ body {
   padding: 0;
   font-family: "PT Mono", monospace;
   overflow-x: hidden;
-  background-color: rgb(252, 252, 252);
+  background-color: rgb(255, 255, 255);
 }
 
 h1 {
@@ -38,4 +38,5 @@ p {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
