--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -11,6 +11,7 @@ body {
 
 h1 {
   color: black;
+  margin: 7.5%;
   font-size: calc(2.4rem + 2vw);
   font-weight: bold;
   text-align: center;
@@ -36,7 +37,10 @@ p {
   margin: auto;
 }
 
-a {
-  text-decoration: none;
+a:hover,
+a:visited,
+a:link,
+a:active {
   color: inherit;
+  text-decoration: none;
 }
