--- a/src/css/Projects.scss
+++ b/src/css/Projects.scss
@@ -5,10 +5,10 @@
   box-sizing: border-box;
   padding: 10px;
   width: 40%;
-  object-fit: cover;
   transition-duration: 0.3s;
   color: transparent;
   text-align: center;
+  background-size: cover;
 }
 
 .cards {
