--- a/src/css/Projects.scss
+++ b/src/css/Projects.scss
@@ -1,14 +1,48 @@
 .project-card {
+  display: flex;
+  flex-direction: column;
   height: 400px;
   margin: auto;
   min-width: 250px;
   box-sizing: border-box;
-  padding: 10px;
   width: 40%;
-  transition-duration: 0.3s;
-  color: transparent;
   text-align: center;
   background-size: cover;
+  background-color: #f5f5f5;
+  border: 1px solid #c4c4c4;
+  padding-bottom: 10px;
+}
+
+.header {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-bottom: 1px solid #c4c4c4;
+}
+
+.body {
+  padding: 10px;
+
+  .header {
+    font-size: 1.2em;
+    margin-bottom: 40px;
+  }
+
+  .desc {
+    font-size: 0.8em;
+    margin-bottom: 40px;
+  }
+
+  .tech-stack {
+    font-size: 0.675em;
+  }
+}
+
+.bottom-row {
+  margin-top: auto;
+  display: flex;
+  flex-direction: row-reverse;
+  padding-right: 15px;
 }
 
 .cards {
@@ -28,10 +62,4 @@
   .cards {
     grid-template-columns: repeat(3, 1fr);
   }
-}
-
-.project-card:hover {
-  cursor: pointer;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.95);
-  color: white;
 }
